<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.lemminx</groupId>
	<artifactId>lemminx-parent</artifactId>
	<version>0.24.0-wso2v5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Eclipse LemMinX</name>
	<description>LemMinX is a XML Language Server Protocol (LSP), and can be used with any editor that supports LSP, to offer an outstanding XML editing experience</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lsp4j.version>0.20.1</lsp4j.version>
		<junit.version>5.9.2</junit.version>
	</properties>
	<url>https://github.com/eclipse/lemminx</url>
	<licenses>
		<license>
			<name>Eclipse Public License - v 2.0</name>
			<url>http://www.eclipse.org/legal/epl-v20.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git@github.com:eclipse/lemminx.git</connection>
		<developerConnection>scm:git:git@github.com:eclipse/lemminx.git</developerConnection>
		<url>https://github.com/eclipse/lemminx</url>
		<tag>HEAD</tag>
	</scm>
	<modules>
		<module>org.eclipse.lemminx</module>
	</modules>
	<pluginRepositories>
		<pluginRepository>
			<id>cbi-release</id>
			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
		</pluginRepository>
		<pluginRepository>
			<id>dash-licenses-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/dash-licenses-snapshots/</url>
			<snapshots>
			    <enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.10.1</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.lsp4j</groupId>
				<artifactId>org.eclipse.lsp4j</artifactId>
				<version>${lsp4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>31.1-jre</version>
				<exclusions>
					<exclusion>
						<groupId>com.google.guava</groupId>
						<artifactId>listenablefuture</artifactId>
					  </exclusion>
					  <exclusion>
						<groupId>org.checkerframework</groupId>
						<artifactId>checker-qual</artifactId>
					  </exclusion>
					  <exclusion>
						<groupId>com.google.errorprone</groupId>
						<artifactId>error_prone_annotations</artifactId>
					  </exclusion>
					  <exclusion>
						<groupId>com.google.j2objc</groupId>
						<artifactId>j2objc-annotations</artifactId>
					  </exclusion>
					  <exclusion>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>animal-sniffer-annotations</artifactId>
					  </exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.eclipse.lsp4j</groupId>
				<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
				<version>${lsp4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>org.eclipse.xtend.lib</artifactId>
				<version>2.16.0.M1</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse</groupId>
				<artifactId>org.eclipse.lemminx</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
					<configuration>
						<runOrder>random</runOrder>
						<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
							<disable>false</disable>
							<usePhrasedFileName>false</usePhrasedFileName>
							<usePhrasedTestSuiteClassName>false</usePhrasedTestSuiteClassName>
							<usePhrasedTestCaseClassName>false</usePhrasedTestCaseClassName>
							<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
						</statelessTestsetReporter>
						<consoleOutputReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
							<disable>false</disable>
							<encoding>UTF-8</encoding>
							<usePhrasedFileName>false</usePhrasedFileName>
						</consoleOutputReporter>
						<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
							<disable>false</disable>
							<usePhrasedFileName>false</usePhrasedFileName>
							<usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
							<usePhrasedClassNameInTestCaseSummary>false</usePhrasedClassNameInTestCaseSummary>
						</statelessTestsetInfoReporter>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>5.1.8</version>
					<executions>
						<execution>
							<id>bundle-manifest</id>
							<phase>process-classes</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
							<configuration>
								<instructions>
									<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
								</instructions>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M6</version>
					<configuration>
						<tagNameFormat>@{project.version}</tagNameFormat>
						<arguments>-DskipTests=true -Dcbi.jarsigner.skip=false -Pci,generate-p2</arguments>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<distributionManagement>
		<repository>
			<id>repo.eclipse.org</id>
			<name>lemminx-releases</name>
			<url>https://repo.eclipse.org/content/repositories/lemminx-releases/</url>
		</repository>
		<snapshotRepository>
			<id>repo.eclipse.org</id>
			<name>lemminx-snapshots</name>
			<url>https://repo.eclipse.org/content/repositories/lemminx-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.4.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<doclint>none</doclint>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>generate-p2</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.tycho.extras</groupId>
							<artifactId>tycho-eclipserun-plugin</artifactId>
							<version>1.3.0</version>
							<executions>
								<execution>
									<id>generate-p2-site</id>
									<phase>package</phase>
									<goals>
										<goal>eclipse-run</goal>
									</goals>
									<configuration>
										<executionEnvironment>JavaSE-17</executionEnvironment>
										<repositories>
											<repository>
												<id>eclipse-4.10</id>
												<layout>p2</layout>
												<url>http://download.eclipse.org/eclipse/updates/4.10/R-4.10-201812060815/</url>
											</repository>
										</repositories>
										<dependencies>
											<dependency>
												<artifactId>org.eclipse.equinox.p2.publisher.eclipse</artifactId>
												<type>eclipse-plugin</type>
											</dependency>
											<dependency>
												<artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
												<type>eclipse-feature</type>
											</dependency>
											<dependency>
												<artifactId>org.eclipse.equinox.core.feature</artifactId>
												<type>eclipse-feature</type>
											</dependency>
										</dependencies>
										<applicationsArgs>
											<arg>-application</arg>
											<arg>org.eclipse.equinox.p2.publisher.FeaturesAndBundlesPublisher</arg>
											<arg>-metadataRepository</arg>
											<arg>file:${project.build.directory}/p2</arg>
											<arg>-artifactRepository</arg>
											<arg>file:${project.build.directory}/p2</arg>
											<arg>-bundles</arg>
											<arg>${project.build.directory}</arg>
											<arg>-compress</arg>
											<arg>-publishArtifacts</arg>
										</applicationsArgs>
									</configuration>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>verify-iplog</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.dash</groupId>
						<artifactId>license-tool-plugin</artifactId>
						<version>0.0.1-SNAPSHOT</version>
						<executions>
							<execution>
								<id>license-check</id>
								<phase>verify</phase>
								<goals>
									<goal>license-check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
